--- a/templates/show_files.html
+++ b/templates/show_files.html
@@ -33,7 +33,7 @@
     <thead class="thead-dark">
     <tr>
       <th scope="col">File Id</th>
-      <th scope="col">Title</th>
+      <th scope="col">Invoice Class</th>
       <th scope="col">Uploaded At</th>
       <th scope="col">Classify with Our Trained Model</th>
       <th scope="col">Uploaded Invoice</th>
@@ -43,7 +43,7 @@
     {% for file in files %}
     <tr>
       <td>{{file.file_id}}</td>
-      <td>{{file.title}}</td>
+      <td>{{file.invoice_class}}</td>
       <td>{{file.uploaded_at}}</td>
       <td>
         <form action="{% url 'classification_prediction' %}" method="post">
