--- a/templates/verify_predictions.html
+++ b/templates/verify_predictions.html
@@ -19,7 +19,7 @@
       <thead class="thead-dark">
       <tr>
         <th scope="col">File Id</th>
-        <th scope="col">Uploaded Invoice Class</th>
+        <th scope="col">Mentioned Invoice Class</th>
         <th scope="col">Predicted Invoice Class</th>
         <th scope="col">Predicted Confidence</th>
         <th scope="col">Uploaded At</th>
@@ -32,7 +32,7 @@
 
       <tr>
         <td>{{file.file_id}}</td>
-        <td>{{file.title}}</td>
+        <td>{{file.invoice_class}}</td>
         <td>{{class_name}}</td>
         <td>{{confidence_score}}</td>
         <td>{{file.uploaded_at}}</td>
